2001-07-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Set moniker property
	manually
	(capplet_control_launch): Remove double-free of the moniker
	(capplet_control_launch): Release and unref the property control
	in the event of an error

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Put up an error dialog
	and abort the process if the capplet reports an error trying to
	resolve its moniker
	(capplet_control_launch): Don't connect the app's button signals
	if the app has just been destroyed

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (install-data-local): Uncomment

2001-07-19  Richard Hestilow  <hestilow@ximian.com>
	
	* Gnome.directory.in.in: Change name to "Main".

	* capplet-dir.c (capplet_new): Return NULL if program
	is not accessible.

	* capplet-dir-view.c (sidebar_populate): Don't show a directory
	if it is empty.

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* Removed debugging spew.

	* Removed most of the menu bar.

	* capplet-dir-view.c (about_menu_cb): Add Chema, jimmac, and myself
	to authors list.

	* capplet-dir-view-html.c (html_populate, html_write_row): Spacing
	fix.

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Added missing Gnome.directory.in.in

	* capplet-dir.c (capplet_control_launch): Don't give an error if
	the property control is NULL

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* forgot to commit the pngs

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir-view-html.c (main_allocate_cb: New function to
	compute optimal number of columns. Try resizing, it's fun!
 
2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view.c (capplet_dir_view_load_dir): Set the window title

2001-07-19  Chema Celorio  <chema@celorio.com>
